--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
     "react-scripts": "3.3.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "uniqid": "^5.2.0",
+    "uuid": "^7.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
